Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-13690

lfs mirror ... /mnt/lustre/.lustre/fid/$FID causes CWARN() about invalid FID formats

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.14.0
    • None
    • None
    • 3
    • 9223372036854775807

      lfs mirror creates a volatile file in the .lustre/fid directory using llapi_create_volatile_param(). That function tries to unlink the volatile file just creates (in case the server does not support volatile files). The unlink causes obf_lookup() to print a warning on the console:

      k:~# echo XXX > /mnt/lustre/f0
      k:~# lfs path2fid /mnt/lustre/f0
      [0x200000401:0x1:0x0]
      k:~# lctl pool_new lustre.ddn_ssd
      Pool lustre.ddn_ssd created
      k:~# lctl pool_new lustre.ddn_hdd
      Pool lustre.ddn_hdd created
      k:~# lctl pool_add lustre.ddn_ssd lustre-OST0000
      OST lustre-OST0000_UUID added to pool lustre.ddn_ssd
      k:~# lctl pool_add lustre.ddn_hdd lustre-OST0001
      OST lustre-OST0001_UUID added to pool lustre.ddn_hdd
      k:~# dmesg -c > /dev/null
      k:~# strace -o strace.out lfs mirror extend -N -p ddn_ssd '/mnt/lustre/.lustre/fid/[0x200000401:0x1:0x0]'
      k:~# dmesg 
      [62872.916981] Lustre: 31074:0:(mdd_device.c:776:obf_lookup()) lustre-MDD0000: Trying to lookup invalid FID [.
                                                                                                                    :VOLATILE:0000:4CC14F53] in .lustre/fid, FID format should be [0x200000400:0x1:0x0]
      

      This is too noisy when 'lfs mirror' is called for lots of file by FID.

            jhammond John Hammond
            jhammond John Hammond
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: